monitoring/graylog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graylog
  namespace: graylog
  labels:
    app: graylog
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: graylog
  template:
    metadata:
      labels:
        app: graylog
    spec:
      securityContext:
        fsGroup: 1100
      containers:
        - name: graylog
          image: graylog/graylog:5.2
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
            limits:
              memory: "1.5Gi"
              cpu: "500m"
          ports:
            - containerPort: 9000
              name: http
            - containerPort: 12201
              name: gelf-udp
              protocol: UDP
            - containerPort: 5140
              name: syslog-udp
              protocol: UDP
            - containerPort: 5044
              name: beats
              protocol: TCP
          volumeMounts:
            - name: graylog-journal
              mountPath: /usr/share/graylog/data/journal
      volumes:
        - name: graylog-journal
          persistentVolumeClaim:
            claimName: graylog-pvc
