monitoring/graylog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog
  namespace: graylog
  annotations:
    cilium.io/loadbalancer-ip-pool: main-pool
spec:
  type: LoadBalancer
  selector:
    app: graylog
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: http
    - name: gelf-udp
      protocol: UDP
      port: 12201
      targetPort: gelf-udp
    - name: syslog-udp
      protocol: UDP
      port: 5140
      targetPort: syslog-udp
    - name: beats
      protocol: TCP
      port: 5044
      targetPort: beats
