monitoring/graylog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graylog
  namespace: graylog
spec:
  ingressClassName: cilium
  rules:
    - host: "cwk.graylog"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: graylog
                port:
                  number: 9000
